[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "railtech-mme"
version = "0.1.0.dev0"
description = "Official Python SDK for MME (Modular Memory Engine) — tag-graph memory for LLMs, built by Rail Tech."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [
    { name = "Rail Tech Inc.", email = "gokuljinusclmda@gmail.com" },
]
keywords = ["mme", "memory", "llm", "railtech", "claude", "mcp", "sdk", "rag", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1"]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "mypy>=1.10",
    "build>=1.2",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://railtech.io"
Documentation = "https://mme.railtech.io"
Repository = "https://github.com/gokulJinu01/railtech-mme-python"
Issues = "https://github.com/gokulJinu01/railtech-mme-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/railtech_mme"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

# ----------------------------------------------------------------------------
# Tooling
# ----------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ANN", "RUF"]
ignore = [
    "UP045",   # prefer Optional[X] over X | None for Python 3.9 readability
    "ANN401",  # Any in **kwargs is fine for thin wrapper classes
    "RUF002",  # allow typographic minus sign in docstrings
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]
"src/railtech_mme/langchain.py" = ["ANN401"]

[tool.mypy]
# Note: no python_version pin — mypy uses the runtime interpreter, so each
# CI matrix slot (3.9 / 3.10 / 3.11 / 3.12) type-checks against its own
# Python version. Pinning to 3.9 caused mypy to refuse match/case syntax in
# pytest's own source on the 3.10+ runners.
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true
files = ["src/railtech_mme"]

[[tool.mypy.overrides]]
module = ["langchain_core.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
]

[tool.coverage.run]
source = ["src/railtech_mme"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
